--- a/kotlin/download-db-as-csv/pom.xml
+++ b/kotlin/download-db-as-csv/pom.xml
@@ -59,6 +59,11 @@
       <version>1.9.0</version>
     </dependency>
     <dependency>
+      <groupId>com.thedeanda</groupId>
+      <artifactId>lorem</artifactId>
+      <version>2.1</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
