fix: code refactor for better coding style and updated doc

--- a/kotlin/download-db-as-csv/src/main/resources/application.properties
+++ b/kotlin/download-db-as-csv/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 # configure the mongoDB client
 quarkus.mongodb.connection-string = mongodb://localhost:27017
 quarkus.mongodb.database = quarkus-example-csv
+
+# configure jpa
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = quarkusTest
+quarkus.datasource.password = quarkusTest
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/quarkus-example-csv
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation = drop-and-create
