--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>download-db-as-csv</module>
         <module>security-authentication-mechanism-customize-quickstart</module>
         <module>security-mongodb-quickstart</module>
+        <module>hibernate-reactive-panache-quickstart-kotlin</module>
     </modules>
 
 </project>
