fix: db username and password

--- a/hibernate-reactive-panache-quickstart-kotlin/src/main/resources/application.properties
+++ b/hibernate-reactive-panache-quickstart-kotlin/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.devservices.enabled=false
 
 # postgresql
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = pgadmin
-quarkus.datasource.password = pgadmin
+quarkus.datasource.username = postgresql
+quarkus.datasource.password = postgresql
 quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.database.generation=drop-and-create
